update webhook URL for TecnaBot chat integration

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
         createChat({
-            webhookUrl: 'http://179.33.50.98:5678/webhook/dbb75228-1b01-43a9-934f-6a7aa9794516/chat',
+            webhookUrl: 'https://n8n.gira360.com/webhook/dbb75228-1b01-43a9-934f-6a7aa9794516/chat',
             initialMessages: [
                 '¡Hola! Soy tu TecnaBot. ¿En qué puedo ayudarte?'
             ],
